# materializr

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  PRIVACY.md  README.md
.github/workflows/: linux.yml
android/: .gitignore  RELEASE-SIGNING.md  keystore.properties.example
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
android/scripts/: setup-deps.sh
docs/: architecture.md  changelog.md  code_map.md  features.md  getting-started.md  im-touch-ui-plan.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.6.0.md  usage.md
ios/: CMakeLists.txt
packaging/winget/: Materializr.Materializr.locale.en-US.yaml  Materializr.Materializr.yaml
scripts/: build-appimage.sh
src/: android_files.cpp  gl_common.h  ios_files.mm  ios_platform.h  main.cpp  mobile_files.h  touch_mode.h
src/app/: Application.cpp  Application.h  Application_Dialogs.cpp  Application_InteractiveOps.cpp  Application_TouchShell.cpp  Application_Viewport.cpp  FaceOpControllers.cpp  Window.cpp  Window.h
src/core/: Document.cpp  Document.h  Events.h  History.cpp  History.h  Operation.h  SelectionManager.cpp  SelectionManager.h
src/io/: BrepIO.cpp  DxfImport.cpp  DxfImport.h  FileDialogs.cpp  (+6 more)
tests/: CMakeLists.txt  probe_shell.cpp  test_blend_cut.cpp  test_brepio_dos.cpp  test_edgeop_highlight_reload.cpp  test_exchange_io.cpp  test_extrude_recovered_profile.cpp  test_operations.cpp  test_reload_edit.cpp  test_shell.cpp  test_sketch_edit_cascade.cpp  test_thread_reflow.cpp  test_topo_boolean_gen.cpp  test_topo_contract.cpp
(+117 files in other folders)
